Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,80 +632,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.plotly.v1+json": {
-       "data": [
-        {
-         "mode": "lines",
-         "name": "data",
-         "text": [],
-         "type": "scatter",
-         "uid": "bad3aa82-06b7-11e9-8fbf-25d77c0f3505",
-         "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5
-         ],
-         "y": [
-          15,
-          19,
-          23,
-          27,
-          31,
-          35
-         ]
-        },
-        {
-         "mode": "lines",
-         "name": "delta f = 1",
-         "text": [],
-         "type": "scatter",
-         "uid": "bad3acb2-06b7-11e9-8fbf-25d77c0f3505",
-         "x": [
-          3,
-          3
-         ],
-         "y": [
-          23,
-          27
-         ]
-        },
-        {
-         "mode": "lines",
-         "name": "delta x = 1",
-         "text": [],
-         "type": "scatter",
-         "uid": "bad3ae06-06b7-11e9-8fbf-25d77c0f3505",
-         "x": [
-          2,
-          3
-         ],
-         "y": [
-          23,
-          23
-         ]
-        }
-       ],
-       "layout": {
-        "title": "4x + 15"
-       }
-      },
       "text/html": [
-       "<div id=\"bff1c385-4d62-400e-84e0-d4ab944cd2c5\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bff1c385-4d62-400e-84e0-d4ab944cd2c5\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"bad8c15c-06b7-11e9-8fbf-25d77c0f3505\"}, {\"mode\": \"lines\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [23, 27], \"type\": \"scatter\", \"uid\": \"bad8c2f6-06b7-11e9-8fbf-25d77c0f3505\"}, {\"mode\": \"lines\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [23, 23], \"type\": \"scatter\", \"uid\": \"bad8c3c8-06b7-11e9-8fbf-25d77c0f3505\"}], {\"title\": \"4x + 15\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"bff1c385-4d62-400e-84e0-d4ab944cd2c5\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bff1c385-4d62-400e-84e0-d4ab944cd2c5\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"bad8c15c-06b7-11e9-8fbf-25d77c0f3505\"}, {\"mode\": \"lines\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [23, 27], \"type\": \"scatter\", \"uid\": \"bad8c2f6-06b7-11e9-8fbf-25d77c0f3505\"}, {\"mode\": \"lines\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [23, 23], \"type\": \"scatter\", \"uid\": \"bad8c3c8-06b7-11e9-8fbf-25d77c0f3505\"}], {\"title\": \"4x + 15\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'delta_x_trace' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-fea6885fb484>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgraph\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrace_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtrace_delta_x_four_x_plus_fifteen\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdelta_x_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfour_x_plus_fifteen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mfour_x_plus_fifteen_trace\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mtrace_delta_f_four_x_plus_fifteen\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mtrace_delta_x_four_x_plus_fifteen\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfour_x_plus_fifteen_trace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrace_delta_f_four_x_plus_fifteen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrace_delta_x_four_x_plus_fifteen\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'title'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'4x + 15'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'delta_x_trace' is not defined"
+     ]
     }
    ],
    "source": [
