Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -632,31 +632,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "e51b6e46-0785-11e9-8825-d344ae8dd233",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5
+         ],
+         "y": [
+          15,
+          19,
+          23,
+          27,
+          31,
+          35
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "delta f = 1",
+         "text": [],
+         "type": "scatter",
+         "uid": "e51b708a-0785-11e9-8825-d344ae8dd233",
+         "x": [
+          3,
+          3
+         ],
+         "y": [
+          23,
+          27
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "delta x = 1",
+         "text": [],
+         "type": "scatter",
+         "uid": "e51b71d4-0785-11e9-8825-d344ae8dd233",
+         "x": [
+          2,
+          3
+         ],
+         "y": [
+          23,
+          23
+         ]
+        }
+       ],
+       "layout": {
+        "title": "4x + 15"
+       }
+      },
       "text/html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+       "<div id=\"2d50a669-94ba-4f0e-9a3e-8573cd87e439\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2d50a669-94ba-4f0e-9a3e-8573cd87e439\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"e520bc5c-0785-11e9-8825-d344ae8dd233\"}, {\"mode\": \"lines\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [23, 27], \"type\": \"scatter\", \"uid\": \"e520be1e-0785-11e9-8825-d344ae8dd233\"}, {\"mode\": \"lines\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [23, 23], \"type\": \"scatter\", \"uid\": \"e520bef0-0785-11e9-8825-d344ae8dd233\"}], {\"title\": \"4x + 15\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+       "<div id=\"2d50a669-94ba-4f0e-9a3e-8573cd87e439\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2d50a669-94ba-4f0e-9a3e-8573cd87e439\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"e520bc5c-0785-11e9-8825-d344ae8dd233\"}, {\"mode\": \"lines\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [23, 27], \"type\": \"scatter\", \"uid\": \"e520be1e-0785-11e9-8825-d344ae8dd233\"}, {\"mode\": \"lines\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [23, 23], \"type\": \"scatter\", \"uid\": \"e520bef0-0785-11e9-8825-d344ae8dd233\"}], {\"title\": \"4x + 15\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'delta_x_trace' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-fea6885fb484>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgraph\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrace_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtrace_delta_x_four_x_plus_fifteen\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdelta_x_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfour_x_plus_fifteen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mfour_x_plus_fifteen_trace\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mtrace_delta_f_four_x_plus_fifteen\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mtrace_delta_x_four_x_plus_fifteen\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfour_x_plus_fifteen_trace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrace_delta_f_four_x_plus_fifteen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrace_delta_x_four_x_plus_fifteen\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'title'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'4x + 15'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'delta_x_trace' is not defined"
-     ]
     }
    ],
    "source": [
@@ -685,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +754,7 @@
        "4.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
